--- a/set.ini
+++ b/set.ini
@@ -1,5 +1,6 @@
 [test]
-test=q
-hostName=polenkov.ru
-userName=samson
-userPassword=samson
+host=polenkov.ru
+username=samson
+password=samson
+database=s11
+port=3306
